Initial work to replace MomentJS with DayJS

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.2.5",
     "connected-react-router": "^6.8.0",
     "core-js": "^3.8.3",
+    "dayjs": "^1.10.4",
     "filepond": "^4.25.1",
     "filepond-plugin-file-validate-size": "^2.2.2",
     "filepond-plugin-file-validate-type": "^1.2.5",
@@ -24,7 +25,6 @@
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.20",
     "marked": "^2.0.0",
-    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "normalizr": "^3.6.1",
     "numeral": "^2.0.6",
