Fixes to bring support yaml in sync and correct response payloads

--- a/swagger/prime.yaml
+++ b/swagger/prime.yaml
@@ -20,6 +20,13 @@ tags:
   - name: mtoShipment
   - name: paymentRequest
   - name: mtoServiceItem
+x-tagGroups:
+  - name: Endpoints
+    tags:
+    - moveTaskOrder
+    - mtoShipment
+    - paymentRequest
+    - mtoServiceItem
 paths:
   /move-task-orders:
     get:
