autogenerate files based on new addition to yaml

--- a/swagger/admin.yaml
+++ b/swagger/admin.yaml
@@ -914,6 +914,23 @@ definitions:
       updatedAt:
         type: string
         format: date-time
+  UpdateWebhookSubscription:
+    type: object
+    properties:
+      subsciberId:
+        type: string
+        format: uuid
+        example: c56a4180-65aa-42ec-a945-5fd21dec0538
+      status:
+        $ref: '#/definitions/WebhookSubscriptionStatus'
+      callbackUrl:
+        type: string
+        description: The URL to which the notifications for this subscription will be pushed to.
+      eventKey:
+        type: string
+        description: >-
+          A string used to represent which events this subscriber expects to be notified about.
+          Corresponds to the possible event_key values in webhook_notifications.
 paths:
   /access_codes:
     get:
@@ -1732,29 +1749,3 @@ paths:
           description: Webhook subscriptions not found
         500:
           description: Server error
-  /webhook_subscriptions/{webhookSubscriptionId}:
-    get:
-      summary: Get information about a webhook subscription
-      description: Returns the given webhook subscription and its details
-      operationId: getWebhookSubscription
-      tags:
-        - webhook_subscriptions
-      parameters:
-        - in: path
-          name: webhookSubscriptionId
-          type: string
-          format: uuid
-          required: true
-      responses:
-        200:
-          description: success
-          schema:
-            $ref: '#/definitions/WebhookSubscription'
-        400:
-          description: invalid request
-        401:
-          description: request requires user authentication
-        404:
-          description: subscription not found
-        500:
-          description: server error
