--- a/package.json
+++ b/package.json
@@ -113,11 +113,14 @@
     "@storybook/react": "^6.1.17",
     "@testing-library/react-hooks": "^5.0.3",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
+    "commander": "^7.0.0",
+    "conf": "^9.0.2",
     "cypress": "^6.4.0",
     "cypress-audit": "^0.3.0",
     "cypress-wait-until": "^1.7.1",
     "danger": "^10.6.2",
     "danger-plugin-jira-issue": "^1.4.1",
+    "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "eslint-config-airbnb": "^18.2.1",
