--- a/swagger/admin.yaml
+++ b/swagger/admin.yaml
@@ -1808,3 +1808,37 @@ paths:
           description: subscription not found
         500:
           description: server error
+    patch:
+      summary: Update a webhook subscription
+      operationId: updateWebhookSubscription
+      tags:
+        - webhook_subscriptions
+      parameters:
+        - in: path
+          name: webhookSubscriptionId
+          type: string
+          format: uuid
+          required: true
+        - in: body
+          name: WebhookSubscription
+          description: Webhook subscription information
+          required: true
+          schema:
+            $ref: '#/definitions/WebhookSubscription'
+      responses:
+        200:
+          description: Successfully updated webhook subscription
+          schema:
+            $ref: '#/definitions/WebhookSubscription'
+        400:
+          description: Invalid Request
+        401:
+          description: Must be authenticated to use this end point
+        403:
+          description: Not authorized to update this webhook subscription
+        422:
+          description: Validation error
+          schema:
+            $ref: '#/definitions/ValidationError'
+        500:
+          description: Server error
