--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1223,7 +1223,7 @@ jobs:
       - aws_vars_exp
       - deploy_app_client_tls_steps:
           compare_host: '' # leave blank since we want exp to be able to roll back
-          health_check_hosts: gex.exp.move.mil,orders.exp.move.mil
+          health_check_hosts: gex.exp.move.mil
           ecr_env: exp
 
   deploy_exp_webhook_client:
@@ -1284,7 +1284,7 @@ jobs:
       - aws_vars_stg
       - deploy_app_client_tls_steps:
           compare_host: gex.stg.move.mil
-          health_check_hosts: gex.stg.move.mil,orders.stg.move.mil
+          health_check_hosts: gex.stg.move.mil
           ecr_env: stg
 
   deploy_storybook_dp3:
@@ -1335,7 +1335,7 @@ jobs:
       - aws_vars_prd
       - deploy_app_client_tls_steps:
           compare_host: gex.move.mil
-          health_check_hosts: gex.move.mil,orders.move.mil
+          health_check_hosts: gex.move.mil
           ecr_env: prd
 
 workflows:
