--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "is-mobile": "2.2.2",
     "jest-canvas-mock": "^2.3.1",
     "js-cookie": "^2.2.0",
+    "lighthouse": "^7.0.0",
     "lodash": "^4.17.20",
     "marked": "^2.0.0",
     "moment": "^2.29.1",
@@ -67,6 +68,7 @@
     "redux-thunk": "^2.2.0",
     "regenerator-runtime": "^0.13.7",
     "reselect": "^4.0.0",
+    "request": "^2.85.0",
     "swagger-client": "^3.13.1",
     "swagger-ui-dist": "^3.43.0",
     "uswds": "2.9.0",
