Update cypress service items assertion

--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -2057,7 +2057,7 @@ definitions:
         format: uuid
         type: string
       mtoServiceItemName:
-        example: Shipment Mgmt. Services
+        example: Move management
         type: string
       mtoShipmentType:
         $ref: '#/definitions/MTOShipmentType'
