--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@transcom/mmds": "https://github.com/transcom/mmds#sr-clone-react-uswds",
     "@trussworks/react-file-viewer": "https://github.com/trussworks/react-file-viewer#ds-enable-image-file-type-support",
     "@trussworks/react-uswds": "^1.10.0",
     "bytes": "^3.0.0",
