--- a/swagger/admin.yaml
+++ b/swagger/admin.yaml
@@ -1833,6 +1833,8 @@ paths:
           description: Must be authenticated to use this end point
         403:
           description: Not authorized to update this webhook subscription
+        404:
+          description: subscription not found
         422:
           description: Validation error
           schema:
