Improve file size benchmarking report

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 coverage.out
 __snapshots__
 cypress/cypress
+/puppeteer/lighthouse-report-fast.json
+/puppeteer/performance-trace-fast.json
 
 # production
 /build
