--- a/.envrc
+++ b/.envrc
@@ -48,6 +48,8 @@ check_required_variables() {
 
 export AWS_VAULT_KEYCHAIN_NAME=login
 
+export AWS_PROFILE=transcom-gov-base-id
+
 #############################
 # Load Secrets from Chamber #
 #############################
