--- a/swagger/support.yaml
+++ b/swagger/support.yaml
@@ -1009,6 +1009,12 @@ definitions:
         type: string
         readOnly: true
         description: Date the MoveTaskOrder was created on.
+      submittedAt:
+        format: date-time
+        type: string
+        readOnly: true
+        x-nullable: true
+        description: Date the MoveTaskOrder was submitted by customer.
       moveOrderID:
         example: c56a4180-65aa-42ec-a945-5fd21dec0538
         format: uuid
@@ -1082,6 +1088,8 @@ definitions:
         type: string
         example: ABC123
         readOnly: true
+      selectedMoveType:
+        $ref: '#/definitions/SelectedMoveType'
   MoveTaskOrders:
     items:
       $ref: '#/definitions/MoveTaskOrder'
@@ -1708,6 +1716,18 @@ definitions:
       - MS
       - NSTH
       - NSTUB
+  SelectedMoveType:
+    type: string
+    title: Selected Move Type
+    enum:
+      - HHG
+      - PPM
+      - UB
+      - POV
+      - HHG_INTO_NTS_DOMESTIC
+      - HHG_OUTOF_NTS_DOMESTIC
+      - HHG_PPM
+    x-nullable: true
   UpdateMTOServiceItemStatus:
     properties:
       status:
