--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@trussworks/react-file-viewer": "https://github.com/trussworks/react-file-viewer#ds-upgrade-three-pkg-vulnerability",
+    "@trussworks/react-file-viewer": "https://github.com/trussworks/react-file-viewer",
     "@trussworks/react-uswds": "^1.10.0",
     "bytes": "^3.0.0",
     "classnames": "^2.2.5",
