MB-5490 Make the status field required for patchMTOShipmentStatus

--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -2314,6 +2314,8 @@ definitions:
         type: string
         example: MTO Shipment not good enough
         x-nullable: true
+    required:
+      - status
   PatchMTOServiceItemStatusPayload:
     properties:
       status:
