--- a/swagger/admin.yaml
+++ b/swagger/admin.yaml
@@ -91,6 +91,9 @@ definitions:
         type: string
         format: uuid
         example: c56a4180-65aa-42ec-a945-5fd21dec0538
+      userId:
+        type: string
+        format: uuid
       firstName:
         type: string
       middleInitials:
