--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -442,6 +442,7 @@ commands:
             ENVIRONMENT: test
             GOFLAGS: '-p=4'
             SERVER_REPORT: 1
+            COVERAGE: 1
             MIGRATION_MANIFEST: '/home/circleci/transcom/mymove/migrations/<< parameters.application >>/migrations_manifest.txt'
             MIGRATION_PATH: 'file:///home/circleci/transcom/mymove/migrations/<< parameters.application >>/schema;file:///home/circleci/transcom/mymove/migrations/<< parameters.application >>/secure'
             SERVE_API_INTERNAL: true
