--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.2.0",
     "regenerator-runtime": "^0.13.7",
-    "reselect": "^4.0.0",
     "request": "^2.85.0",
+    "reselect": "^4.0.0",
     "swagger-client": "^3.13.1",
     "swagger-ui-dist": "^3.44.0",
     "uswds": "2.9.0",
@@ -106,6 +106,7 @@
   "devDependencies": {
     "@babel/core": "~7.13.8",
     "@dump247/storybook-state": "^1.6.1",
+    "@redux-saga/testing-utils": "^1.1.3",
     "@stoplight/spectral": "^5.8.1",
     "@storybook/addon-a11y": "^6.1.20",
     "@storybook/addon-essentials": "^6.1.20",
