--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.2.0",
     "regenerator-runtime": "^0.13.7",
-    "reselect": "^4.0.0",
     "request": "^2.85.0",
+    "reselect": "^4.0.0",
     "swagger-client": "^3.13.1",
     "swagger-ui-dist": "^3.44.1",
     "uswds": "2.9.0",
@@ -114,7 +114,10 @@
     "@storybook/addons": "^6.1.21",
     "@storybook/preset-create-react-app": "^3.1.6",
     "@storybook/react": "^6.1.21",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^5.1.0",
+    "@testing-library/user-event": "^12.8.3",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "commander": "^7.1.0",
     "conf": "^9.0.2",
