Add MoveID to the PatchServiceMemberPayload
- add the move id to the patch service member payload so that the
handler retrieve the move and check if the branch, rank, and duty
station should be allowed to update (those fields should not be editable
once the move is submitted)

--- a/swagger/internal.yaml
+++ b/swagger/internal.yaml
@@ -1404,6 +1404,10 @@ definitions:
       backup_mailing_address:
         $ref: '#/definitions/Address'
         title: Backup Mailing Address
+      move_id:
+        type: string
+        format: uuid
+        example: c56a4180-65aa-42ec-a945-5fd21dec0538
   ServiceMemberBackupContactPayload:
     type: object
     properties:
