--- a/swagger/support.yaml
+++ b/swagger/support.yaml
@@ -1725,6 +1725,7 @@ definitions:
           - REJECTED
           - APPROVED
           - SUBMITTED
+          - CANCELLATION_REQUESTED
       rejectionReason:
         type: string
         example: MTO Shipment not good enough
