Only change orders information if it is different from sm info

--- a/swagger/internal.yaml
+++ b/swagger/internal.yaml
@@ -2078,6 +2078,10 @@ definitions:
       spouse_has_pro_gear:
         type: boolean
         title: Do you have a spouse who will need to move items related to their occupation (also known as spouse pro-gear)?
+      grade:
+        $ref: '#/definitions/ServiceMemberRank'
+      origin_duty_station:
+        $ref: '#/definitions/DutyStationPayload'
       new_duty_station:
         $ref: '#/definitions/DutyStationPayload'
       uploaded_orders:
