Update configuration of auto-approve plugin
Starting Mar 1 a change to github actions started causing inconsistent
failures in the auto-approve job. This commit applies a fix mentioned in
the github issue on the auto-approve repo.

See https://github.com/hmarr/auto-approve-action/issues/183

--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   approve:
     name: auto-approve dependabot PRs
-    if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
+    if: github.actor == 'dependabot[bot]' && contains(github.event.pull_request.labels.*.name, 'dependencies')
     runs-on: ubuntu-latest
     steps:
       - name: approve
