--- a/swagger/support.yaml
+++ b/swagger/support.yaml
@@ -427,6 +427,34 @@ paths:
           $ref: '#/responses/UnprocessableEntity'
         '500':
           $ref: '#/responses/ServerError'
+  '/webhook-notifications':
+    post:
+      summary: Test endpoint for creatings webhook notifications
+      description: >
+        This endpoint creates a webhook notification in the database.
+        If the webhook client is running, it may send the notification soon after creation.
+      operationId: createWebhookNotification
+      tags:
+        - webhook
+      produces:
+        - application/json
+      consumes:
+        - application/json
+      parameters:
+        - in: body
+          name: body
+          description: The notification sent by webhook-client.
+          schema:
+            $ref: '#/definitions/WebhookNotification'
+      responses:
+        '201':
+          description: Successful creation
+          schema:
+            $ref: '#/definitions/WebhookNotification'
+        '422':
+          $ref: '#/responses/UnprocessableEntity'
+        '500':
+          $ref: '#/responses/ServerError'
   '/webhook-notify':
     post:
       summary: Test endpoint for sending messages via webhook
@@ -447,52 +475,12 @@ paths:
           name: body
           description: The notification sent by webhook-client.
           schema:
-            type: object
-            properties:
-              id:
-                type: string
-                format: uuid
-                example: c56a4180-65aa-42ec-a945-5fd21dec0538
-              eventName:
-                type: string
-                description: Name of event triggered
-                example: paymentRequest.updated
-              triggeredAt:
-                type: string
-                format: date-time
-                description: Time representing when the event was triggered
-              objectType:
-                type: string
-                description: The type of object that's being updated
-                example: paymentRequest
-              object:
-                type: string
-                format: object
+            $ref: '#/definitions/WebhookNotification'
       responses:
         '200':
-          description: Sent
+          description: Successful creation
           schema:
-            type: object
-            properties:
-              id:
-                type: string
-                format: uuid
-                example: c56a4180-65aa-42ec-a945-5fd21dec0538
-              eventName:
-                type: string
-                description: Name of event triggered
-                example: paymentRequest.updated
-              triggeredAt:
-                type: string
-                format: date-time
-                description: Time representing when the event was triggered
-              objectType:
-                type: string
-                description: The type of object that's being updated
-                example: paymentRequest
-              object:
-                type: string
-                format: object
+            $ref: '#/definitions/WebhookNotification'
         '400':
           description: Bad request
         '401':
@@ -1797,6 +1785,28 @@ definitions:
             type: string
     required:
       - invalidFields
+  WebhookNotification:
+    type: object
+    properties:
+      id:
+        type: string
+        format: uuid
+        example: c56a4180-65aa-42ec-a945-5fd21dec0538
+      eventName:
+        type: string
+        description: Name of event triggered
+        example: paymentRequest.updated
+      triggeredAt:
+        type: string
+        format: date-time
+        description: Time representing when the event was triggered
+      objectType:
+        type: string
+        description: The type of object that's being updated
+        example: paymentRequest
+      object:
+        type: string
+        format: object
 responses:
   InvalidRequest:
     description: The request payload is invalid.
