--- a/Dockerfile.webhook_client
+++ b/Dockerfile.webhook_client
@@ -2,7 +2,7 @@
 # BUILDER #
 ###########
 
-FROM milmove/circleci-docker:milmove-app as builder
+FROM milmove/circleci-docker:milmove-app-58bb84d191f981213a6e5f26da6ebd95a352e92d as builder
 
 # Prepare public DOD certificates.
 USER root
